gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21259.d
version https://git-lfs.github.com/spec/v1
oid sha256:aaf9d3a93abda0597213a4eaf5fd9041c0b3b027754f79f678f52f9adcfa3d74
size 1039
